syntax = "proto3";

option java_multiple_files = true;
option java_package = "via.sep3.logicserver.protobuf";

// Definition

service LogicServer {
    rpc createMember(MemberTO) returns(ResponseMember);
    rpc loginMember(MemberTO) returns(ResponseMember);
    rpc createExercise(ExerciseTO) returns(ExerciseTO);
    rpc getExercises(EmptyPar) returns(ExercisesTO);
}

message EmptyPar {
    string empty = 1;
}

message ExercisesTO {
    repeated ExerciseTO exercises = 1;
}

message MemberTO {
    string username = 1;
    string password = 2;
}

message ExerciseTO {
    string name = 1;
    string description = 2;
    int32 duration = 3;
}

message ResponseMember {
    string username = 2;
}