syntax = "proto3";

option java_multiple_files = true;
option java_package = "via.sep3.logicserver.protobuf";

import "LogicServer.proto";

message LoginCreateObject {
    string Username = 1;
    string Password = 2;
}

message MemberObj {
    int32 Id = 1;
    string Username = 2;
    string Password = 3;
    string Position = 4;
}

message Members {
    repeated MemberObj members = 1;
}

service MemberService {
    rpc createMember(LoginCreateObject) returns(MemberObj);
    rpc loginMember(LoginCreateObject) returns(MemberObj);
    rpc editPrivilege(MemberObj) returns(StringObj);
    rpc getMembers(StringObj) returns(Members);
}