syntax = "proto3";

option java_multiple_files = true;
option java_package = "via.sep3.logicserver.protobuf";

import "LogicServer.proto";
import "ExerciseService.proto";
import "MemberService.proto";

message WorkoutObj {
    int32 id = 1;
    string name = 2;
    string description = 3;
    int32 durationInMin = 4;
    int32 createdBy = 5;
    int32 followedBy = 6;
    bool isPublic = 7;
    repeated ExerciseObj exercises = 8;
    repeated AssignWorkoutObj followers = 9;
}

message Workout {
    int32 id = 1;
    string name = 2;
    string description = 3;
    int32 durationInMin = 4;
    MemberObj createdBy = 5;
    int32 followedBy = 6;
    bool isPublic = 7;
    repeated ExerciseObj exercises = 8;
}

message Workouts {
    repeated WorkoutObj workouts = 1;
}

message AssignWorkoutObj {
    int32 userID = 1;
    int32 workoutID = 2;
}

service WorkoutService {
    rpc GetWorkouts(IntObj) returns(Workouts);
    rpc GetWorkout(IntObj) returns(WorkoutObj);
    rpc AssignWorkout(AssignWorkoutObj) returns(AssignWorkoutObj);
    rpc EditWorkout(WorkoutObj) returns(StringObj);
    rpc DeleteWorkout(IntObj) returns(StringObj);
    rpc CreateWorkout(WorkoutObj) returns(WorkoutObj);
}
